class WindowIntegrationController:
    pass
