class ReplaceHelper:
    def __init__(self) -> None:
        self.part_of_speech_dict: dict = {
            'NOUN': 'существительное',
            'VERB': 'глагол',
            'ADJ': 'прилагательное',
            'ADV': 'наречие',
            'PROPN': 'имя собственное',
            'PRON': 'местоимение',
            'NUM': 'числительное',
            'ADP': 'предлог/послелог',
            'CCONJ': 'союз',
            'SCONJ': 'подчинительный союз',
            'INTJ': 'междометие',
            'PART': 'частица',
            'AUX': 'вспомогательный глагол',
            'DET': 'определитель',
            'SYM': 'символ'
        }

        self.case_dict: dict = {
            'Nom': 'именительный',
            'Gen': 'родительный',
            'Dat': 'дательный',
            'Acc': 'винительный',
            'Ins': 'творительный',
            'Loc': 'предложный',
            '-': '-'
        }

        self.number_dict: dict = {
            'Sing': 'единственное',
            'Plur': 'множественное',
            '-': '-'
        }

        self.gender_dict: dict = {
            'Masc': 'мужской',
            'Fem': 'женский',
            'Neut': 'средний',
            '-': '-'
        }
