class AddWordWindow:
    pass
