class EditWordWindow:
    pass
