import tkinter as tk
from tkinter import ttk


class MainWindow(tk.Toplevel):
    def __init__(self) -> None:
        super().__init__()
