import tkinter as tk
from tkinter import ttk


class WordFormGenerationWindow(tk.Toplevel):
    def __init__(self) -> None:
        super().__init__()
